[tool.poetry]
name = "dli-2024"
version = "0.1.0"
description = ""
authors = ["Emily-Rose Steyn <emilyrosesteyn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
jax = "^0.4.31"
matplotlib = "^3.9.2"
numpy = "^2.1.0"
seaborn = "^0.13.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
